# pressReadMePlease

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  config_example.toml  entrypoint.sh  mlol.py  parse_credentials.py  pressreader-cron  pressreader.py  pyproject.toml  test.py
.github/: FUNDING.yml
.github/workflows/: publish_pipeline.yml  release.yml  test_pipeline.yml
src/: __init__.py  cache.py  chromium.py  configuration.py  e2e_startup.py  error_handling.py  main.py  mlol.py  notification_service.env  notify.py  parse_credentials.py  pressreader.py  pressreadmeplease.py  screenshot.py  utilities.py
src/tests/: test_screenshot.py
tests/: test_cache.py  test_cloudflare.py  test_headless.py  test_mlol.py  test_pressreader.py  test_screenshot.py
