[project]
name = "pressreadmeplease"
version = "3.1.11"
description = "A process for automating PressReader weekly token automagically."
authors = [{ name = "tatoalo", email = "apogliaghi@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mock==5.2.0",
    "playwright==1.58.0",
    "pydantic==2.13.4",
    "pytest==9.0.2",
    "diskcache==5.6.3",
    "pyvirtualdisplay==3.0.0",
    "requests==2.32.5",
    "tomlkit==0.14.0",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "certifi==2026.2.25",
    "pillow==12.1.1",
    "imagehash==4.3.2",
    "logfire==4.33.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.13",
    "pre-commit==4.6.0",
]
